# run-hackathon

./: .env.example  README.md  pyproject.toml
.github/workflows/: build-deploy-docker.yaml
apps/voice-api/: Dockerfile  main.py  pyproject.toml
apps/voice-api/src/voice_api/: __init__.py  main.py
apps/voice-api/src/voice_api/config/: settings.py
apps/voice-api/src/voice_api/entities/: twilio.py
apps/voice-api/src/voice_api/routers/: __init__.py  twilio.py
apps/voice-api/src/voice_api/utils/: audio.py  twilio_security.py
apps/voice-api/tests/: __init__.py  test_health.py  test_main.py  test_routers_twilio.py  test_utils_audio.py  test_utils_twilio_security.py
libs/agent-core/: pyproject.toml
libs/agent-core/src/agent_core/: __init__.py
libs/agent-core/src/agent_core/agents/: __init__.py
libs/agent-core/src/agent_core/agents/faq_agent/: agent.py
libs/agent-core/src/agent_core/agents/menu_agent/: agent.py
libs/agent-core/src/agent_core/agents/rag_agent/: agent.py
libs/agent-core/src/agent_core/agents/scheduling_agent/: __init__.py  agent.py  tools.py
libs/agent-core/src/agent_core/agents/voice_agent/: agent.py
libs/agent-core/src/agent_core/runtime/: live_messaging.py
libs/agent-core/tests/: test_agents.py  test_live_messaging.py
