[project]
name = "run-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "voice-api",
    "agent-core"
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
]

[tool.poe.tasks]
adk-web = "adk web ./libs/agent-core/src/agent_core/agents --port 8080"
api-build = "docker build -t voice-api -f apps/voice-api/Dockerfile ."
api-dev = "uvicorn voice_api.main:app --reload --host 0.0.0.0 --port 8000"
api-run = "uvicorn voice_api.main:app --host 0.0.0.0 --port 8000"
test = "pytest"

[tool.uv.sources]
agent-core = { workspace = true }
voice-api = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*",
]
